/api/agent/status api 추가, 상담사 로그인시 챗방 않만듦.